--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
      </small></div>
   
    <div class="note-two small"> 
-     <p><a href="dream.html" title="to dream randomizer">
+     <p><a href="https://www.youtube.com/watch?v=E4WlUXrJgy4" title="key to success">
        <h1> &#8618;</h1></a>
 
   </div>
